Status uppdate for repository at D:/Projekt VS code/Goodmorning

--- a/data/index.html
+++ b/data/index.html
@@ -14,8 +14,8 @@
       <div class="sub" id="statusLine">Laddar status</div>
     </div>
     <div class="actions">
-      <button id="btnWifi" class="btn secondary">WiFi</button>
-      <button id="btnRefresh" class="btn">Uppdatera</button>
+      <button id="btnWifi" class="btn secondary" type="button">WiFi</button>
+      <button id="btnRefresh" class="btn" type="button">Uppdatera</button>
     </div>
   </header>
 
@@ -47,7 +47,7 @@
       <div class="row">
         <div class="h">Alarm</div>
         <div class="row2">
-          <button id="btnNewAlarm" class="btn">Nytt alarm</button>
+          <button id="btnNewAlarm" class="btn" type="button">Nytt alarm</button>
         </div>
       </div>
       <div id="alarmList" class="list"></div>
@@ -60,7 +60,7 @@
       </div>
       <div class="row">
         <input type="file" id="filePick" />
-        <button id="btnUpload" class="btn">Ladda upp</button>
+        <button id="btnUpload" class="btn" type="button">Ladda upp</button>
       </div>
       <div class="row small" id="fsInfo">-</div>
       <div id="fileList" class="list"></div>
@@ -70,13 +70,13 @@
       <div class="row">
         <div class="h">System</div>
         <div class="row2">
-          <button id="btnExport" class="btn secondary">Export config</button>
-          <button id="btnRestart" class="btn danger">Starta om</button>
+          <button id="btnExport" class="btn secondary" type="button">Export config</button>
+          <button id="btnRestart" class="btn danger" type="button">Starta om</button>
         </div>
       </div>
       <textarea id="exportBox" placeholder="Export JSON visas här" rows="8"></textarea>
       <div class="row">
-        <button id="btnImport" class="btn">Import config</button>
+        <button id="btnImport" class="btn" type="button">Import config</button>
       </div>
     </section>
   </main>
@@ -170,13 +170,13 @@
       </div>
 
       <div class="row2">
-        <button id="btnTestAudio" class="btn secondary" value="noop">Testa ljud</button>
-        <button id="btnFireNow" class="btn secondary" value="noop">Fire now</button>
+        <button id="btnTestAudio" class="btn secondary" type="button">Testa ljud</button>
+        <button id="btnFireNow" class="btn secondary" type="button">Fire now</button>
       </div>
 
       <menu class="menu">
-        <button id="btnCancel" class="btn secondary">Avbryt</button>
-        <button id="btnSave" class="btn">Spara</button>
+        <button id="btnCancel" class="btn secondary" type="button">Avbryt</button>
+        <button id="btnSave" class="btn" type="button">Spara</button>
       </menu>
 
       <div class="small" id="dlgMsg"></div>
