Fungerar typ nu

--- a/data/index.html
+++ b/data/index.html
@@ -55,6 +55,14 @@
 
     <section class="card">
       <div class="row">
+        <div class="h">Logg</div>
+        <div class="small">Senaste händelserna från enheten.</div>
+      </div>
+      <pre id="logBox" class="log-box">Laddar logg...</pre>
+    </section>
+
+    <section class="card">
+      <div class="row">
         <div class="h">Ljudfiler</div>
         <div class="small">Rekommenderat: WAV mono 16 kHz 16-bit.</div>
       </div>
